[gd_scene load_steps=38 format=2]

[ext_resource path="res://scenes/gameplay/leaderboard.gd" type="Script" id=1]
[ext_resource path="res://sprites/jvalls/circle.png" type="Texture" id=2]
[ext_resource path="res://scenes/gameplay/NonScrollingEntities.gd" type="Script" id=3]
[ext_resource path="res://scenes/gameplay/Splash.gd" type="Script" id=4]
[ext_resource path="res://prefabs/WaterBody2D.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/gameplay/Level2Entities.gd" type="Script" id=6]
[ext_resource path="res://sprites/craftpix/Rocket_Effect_02.png" type="Texture" id=7]
[ext_resource path="res://scenes/gameplay/Camera2DShaker.gd" type="Script" id=14]
[ext_resource path="res://fonts/ShantellSans-ExtraBoldItalic.ttf" type="DynamicFontData" id=18]
[ext_resource path="res://sprites/Circle Filled - Mini.png" type="Texture" id=23]
[ext_resource path="res://sprites/craftpix/water-surface.png" type="Texture" id=26]
[ext_resource path="res://sprites/craftpix/craftpix-net-724983-ocean-and-clouds-free-pixel-art-backgrounds/Ocean_3/1.png" type="Texture" id=28]
[ext_resource path="res://sprites/craftpix/craftpix-net-153409-free-seaport-tileset-32x32-pixel-art-for-platformer/1 Tiles/WaterTiles.png" type="Texture" id=30]
[ext_resource path="res://sprites/craftpix/craftpix-net-724983-ocean-and-clouds-free-pixel-art-backgrounds/Ocean_3/3.png" type="Texture" id=50]
[ext_resource path="res://sprites/craftpix/craftpix-net-645714-free-sky-with-clouds-pixel-art-backgrounds-pack-3/background 3/5.png" type="Texture" id=55]

[sub_resource type="Gradient" id=76]
offsets = PoolRealArray( 0.0111732, 1 )
colors = PoolColorArray( 0.372549, 0.752941, 0.72549, 1, 0.372549, 0.752941, 0.72549, 0 )

[sub_resource type="GradientTexture2D" id=47]
gradient = SubResource( 76 )
height = 264
fill_to = Vector2( 0, 1 )

[sub_resource type="Gradient" id=161]
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=93]
gradient = SubResource( 161 )
width = 128

[sub_resource type="Curve" id=162]
_data = [ Vector2( 0, 0.440909 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=95]
curve = SubResource( 162 )

[sub_resource type="ParticlesMaterial" id=163]
emission_shape = 5
emission_ring_radius = 16.0
emission_ring_inner_radius = 0.0
emission_ring_height = 1.0
emission_ring_axis = Vector3( 0, 0, 1 )
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
spread = 30.0
gravity = Vector3( 0, 600, 0 )
initial_velocity = 256.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping = 100.0
scale = 3.0
scale_curve = SubResource( 95 )
color = Color( 0.2, 0.45098, 0.639216, 1 )
color_ramp = SubResource( 93 )

[sub_resource type="ParticlesMaterial" id=164]
emission_shape = 5
emission_ring_radius = 16.0
emission_ring_inner_radius = 0.0
emission_ring_height = 1.0
emission_ring_axis = Vector3( 0, 0, 1 )
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
spread = 25.0
gravity = Vector3( 0, 600, 0 )
initial_velocity = 256.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping = 100.0
scale = 3.0
scale_curve = SubResource( 95 )
color_ramp = SubResource( 93 )

[sub_resource type="Gradient" id=166]
offsets = PoolRealArray( 0, 0.128492, 1 )
colors = PoolColorArray( 0, 0.0156863, 0.188235, 0, 0, 0.0588235, 0.678431, 0.501961, 0, 0, 0, 0.768627 )

[sub_resource type="GradientTexture2D" id=2]
gradient = SubResource( 166 )
height = 384
fill_to = Vector2( 0, 1 )
repeat = 1

[sub_resource type="DynamicFont" id=1]
size = 20
outline_color = Color( 0.482353, 0.623529, 0.239216, 1 )
font_data = ExtResource( 18 )

[sub_resource type="DynamicFont" id=135]
size = 10
font_data = ExtResource( 18 )

[sub_resource type="DynamicFont" id=69]
size = 10
font_data = ExtResource( 18 )

[sub_resource type="Gradient" id=136]
offsets = PoolRealArray( 0, 0.0864662, 0.31203, 1 )
colors = PoolColorArray( 1, 0.785156, 0, 1, 0.932076, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 0 )

[sub_resource type="GradientTexture" id=137]
gradient = SubResource( 136 )
width = 128

[sub_resource type="ParticlesMaterial" id=138]
emission_shape = 5
emission_ring_radius = 10.0
emission_ring_inner_radius = 0.0
emission_ring_height = 1.0
emission_ring_axis = Vector3( 0, 0, 1 )
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, -80, 0 )
initial_velocity = 50.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping = 100.0
scale_random = 1.0
color = Color( 1, 1, 1, 0.768627 )
color_ramp = SubResource( 137 )

[sub_resource type="Gradient" id=139]
offsets = PoolRealArray( 0, 0.996241, 1 )
colors = PoolColorArray( 1, 0, 0, 1, 1, 0, 0, 0, 0, 0, 0, 0 )

[sub_resource type="GradientTexture" id=140]
gradient = SubResource( 139 )

[sub_resource type="ParticlesMaterial" id=141]
emission_shape = 5
emission_ring_radius = 10.0
emission_ring_inner_radius = 0.0
emission_ring_height = 1.0
emission_ring_axis = Vector3( 0, 0, 1 )
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, -10, 0 )
initial_velocity = 10.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale_random = 1.0
color = Color( 1, 1, 1, 0.768627 )
color_ramp = SubResource( 140 )

[sub_resource type="Gradient" id=158]
offsets = PoolRealArray( 0, 0.996241, 1 )
colors = PoolColorArray( 0, 1, 0.273438, 1, 0.192157, 0.572549, 0.192157, 0, 0, 0, 0, 0 )

[sub_resource type="GradientTexture" id=159]
gradient = SubResource( 158 )

[sub_resource type="ParticlesMaterial" id=160]
emission_shape = 5
emission_ring_radius = 10.0
emission_ring_inner_radius = 0.0
emission_ring_height = 1.0
emission_ring_axis = Vector3( 0, 0, 1 )
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, -10, 0 )
initial_velocity = 15.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale_random = 1.0
color = Color( 1, 1, 1, 0.768627 )
color_ramp = SubResource( 159 )

[node name="Leaderboard" type="Node2D"]
position = Vector2( 1, 0 )
script = ExtResource( 1 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0, 0 )
motion_mirroring = Vector2( 1152, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sky" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 0, -88 )
texture = ExtResource( 28 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sky2" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 576, -88 )
texture = ExtResource( 28 )
__meta__ = {
"_edit_lock_": true
}

[node name="Water" type="ColorRect" parent="ParallaxBackground/ParallaxLayer"]
margin_left = -288.0
margin_top = 74.0
margin_right = 864.0
margin_bottom = 338.0
color = Color( 0.372549, 0.752941, 0.72549, 1 )

[node name="Water2" type="TextureRect" parent="ParallaxBackground/ParallaxLayer"]
margin_left = -288.0
margin_top = 74.0
margin_right = 864.0
margin_bottom = 338.0
texture = ExtResource( 26 )
stretch_mode = 2
__meta__ = {
"_edit_lock_": true
}

[node name="Water3" type="TextureRect" parent="ParallaxBackground/ParallaxLayer"]
margin_left = -288.0
margin_top = 74.0
margin_right = 864.0
margin_bottom = 338.0
texture = SubResource( 47 )
stretch_mode = 2
__meta__ = {
"_edit_lock_": true
}

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.25, 0.25 )
motion_mirroring = Vector2( 1152, 0 )

[node name="3" type="Sprite" parent="ParallaxBackground/ParallaxLayer2"]
position = Vector2( 0, -88 )
texture = ExtResource( 50 )
__meta__ = {
"_edit_lock_": true
}

[node name="4" type="Sprite" parent="ParallaxBackground/ParallaxLayer2"]
position = Vector2( 576, -88 )
texture = ExtResource( 50 )
__meta__ = {
"_edit_lock_": true
}

[node name="ParallaxLayer4" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 2304, 0 )

[node name="WaterLine" type="TextureRect" parent="ParallaxBackground/ParallaxLayer4"]
visible = false
margin_left = -576.0
margin_right = 2048.0
margin_bottom = 320.0
texture = ExtResource( 30 )
stretch_mode = 2
__meta__ = {
"_edit_lock_": true
}

[node name="ColorRect" type="ColorRect" parent="ParallaxBackground/ParallaxLayer4/WaterLine"]
margin_top = 320.0
margin_right = 2432.0
margin_bottom = 568.0
color = Color( 0.219608, 0, 0.172549, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="5" type="Sprite" parent="ParallaxBackground/ParallaxLayer4"]
position = Vector2( -216, -270 )
texture = ExtResource( 55 )

[node name="6" type="Sprite" parent="ParallaxBackground/ParallaxLayer4"]
position = Vector2( 1480, -342 )
texture = ExtResource( 55 )
flip_h = true

[node name="WaterBody2D" parent="." instance=ExtResource( 5 )]
position = Vector2( -128, 0 )
k = 0.015
d = 0.05
spread = 0.8
scroll_speed = 2560

[node name="Splash" type="Node2D" parent="WaterBody2D"]
position = Vector2( 248, -20 )
rotation = 1.5708
script = ExtResource( 4 )

[node name="Particles2D2" type="Particles2D" parent="WaterBody2D/Splash"]
rotation = -1.5708
emitting = false
amount = 16
lifetime = 0.6
one_shot = true
explosiveness = 0.9
local_coords = false
process_material = SubResource( 163 )
texture = ExtResource( 2 )

[node name="Particles2D3" type="Particles2D" parent="WaterBody2D/Splash"]
rotation = -1.5708
emitting = false
amount = 32
lifetime = 0.6
one_shot = true
explosiveness = 0.9
local_coords = false
process_material = SubResource( 164 )
texture = ExtResource( 2 )

[node name="RocketEffect02" type="Sprite" parent="WaterBody2D/Splash"]
modulate = Color( 1, 1, 1, 0 )
rotation = 1.5708
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 7 )

[node name="DepthFade" type="TextureRect" parent="."]
margin_left = -577.0
margin_right = 2015.0
margin_bottom = 384.0
texture = SubResource( 2 )
stretch_mode = 2
__meta__ = {
"_edit_lock_": true
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 5

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 16
custom_constants/margin_top = 16
custom_constants/margin_left = 16
custom_constants/margin_bottom = 16
__meta__ = {
"_edit_lock_": true
}

[node name="LeaderboardVBoxContainer" type="VBoxContainer" parent="CanvasLayer/MarginContainer"]
unique_name_in_owner = true
margin_left = 16.0
margin_top = 16.0
margin_right = 624.0
margin_bottom = 464.0
alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/MarginContainer/LeaderboardVBoxContainer"]
margin_top = 149.0
margin_right = 608.0
margin_bottom = 261.0

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/MarginContainer/LeaderboardVBoxContainer/CenterContainer"]
self_modulate = Color( 1, 1, 1, 0.752941 )
margin_left = 137.0
margin_right = 471.0
margin_bottom = 112.0
size_flags_horizontal = 0

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MarginContainer/LeaderboardVBoxContainer/CenterContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 327.0
margin_bottom = 105.0

[node name="Label4" type="Label" parent="CanvasLayer/MarginContainer/LeaderboardVBoxContainer/CenterContainer/PanelContainer/VBoxContainer"]
margin_right = 320.0
margin_bottom = 28.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 1 )
text = "Leaderboard"
align = 1
valign = 1

[node name="LeaderboardEntries" type="Label" parent="CanvasLayer/MarginContainer/LeaderboardVBoxContainer/CenterContainer/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 32.0
margin_right = 320.0
margin_bottom = 47.0
rect_min_size = Vector2( 320, 0 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 135 )
text = "Loading..."
align = 1
valign = 1

[node name="Label6" type="Label" parent="CanvasLayer/MarginContainer/LeaderboardVBoxContainer/CenterContainer/PanelContainer/VBoxContainer"]
margin_top = 51.0
margin_right = 320.0
margin_bottom = 79.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 1 )
text = "Your Top Score:"
align = 1
valign = 1

[node name="maxScoreLabel" type="Label" parent="CanvasLayer/MarginContainer/LeaderboardVBoxContainer/CenterContainer/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 83.0
margin_right = 320.0
margin_bottom = 98.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 135 )
text = "00000"
align = 1
valign = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="CanvasLayer/MarginContainer/LeaderboardVBoxContainer"]
margin_top = 265.0
margin_right = 608.0
margin_bottom = 299.0
alignment = 1

[node name="Retry" type="Button" parent="CanvasLayer/MarginContainer/LeaderboardVBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
visible = false
margin_left = 200.0
margin_right = 272.0
margin_bottom = 34.0
custom_fonts/font = SubResource( 1 )
text = "Retry"

[node name="MainMenu" type="Button" parent="CanvasLayer/MarginContainer/LeaderboardVBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
margin_left = 238.0
margin_right = 370.0
margin_bottom = 34.0
custom_colors/font_color = Color( 0.27451, 0.647059, 0.933333, 1 )
custom_fonts/font = SubResource( 1 )
text = "Main menu"

[node name="ColorRect1" type="ColorRect" parent="CanvasLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="Label3" type="Label" parent="CanvasLayer/ColorRect1"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 69 )
text = "

Game Over"
align = 1
valign = 1
autowrap = true

[node name="ColorRect2" type="ColorRect" parent="CanvasLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.921569, 0.952941, 0.972549, 1 )

[node name="Label3" type="Label" parent="CanvasLayer/ColorRect2"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0.219608, 0, 0.172549, 1 )
custom_fonts/font = SubResource( 69 )
text = "






The odds were stacked against you little turtle...

Let's change the rules of the game..."
align = 1
valign = 1
autowrap = true

[node name="Entities" type="Node2D" parent="."]
script = ExtResource( 6 )

[node name="Explosion" type="Particles2D" parent="Entities" groups=["keep"]]
position = Vector2( 552, -336 )
emitting = false
amount = 16
lifetime = 0.5
one_shot = true
explosiveness = 0.9
visibility_rect = Rect2( -256, -256, 768, 512 )
process_material = SubResource( 138 )
texture = ExtResource( 23 )

[node name="Death" type="Particles2D" parent="Entities" groups=["keep"]]
position = Vector2( 560, 544 )
emitting = false
amount = 16
lifetime = 0.5
one_shot = true
explosiveness = 0.9
visibility_rect = Rect2( -256, -256, 768, 512 )
process_material = SubResource( 141 )
texture = ExtResource( 23 )

[node name="Burst" type="Particles2D" parent="Entities" groups=["keep"]]
position = Vector2( 560, 544 )
emitting = false
amount = 16
lifetime = 0.5
one_shot = true
explosiveness = 0.9
visibility_rect = Rect2( -256, -256, 768, 512 )
process_material = SubResource( 160 )
texture = ExtResource( 23 )

[node name="NonScrollingEntities" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="Camera2D" type="Camera2D" parent="."]
unique_name_in_owner = true
position = Vector2( -1, -64 )
current = true
limit_left = -128
limit_top = -384
limit_right = 512
limit_bottom = 384
smoothing_enabled = true
script = ExtResource( 14 )
